[package]
name = "grav1an"
version = "0.1.0"
edition = "2021"

[dependencies]
av-metrics-decoders = { version = "0.3.1", default-features = false, features = ["vapoursynth"] }
base16ct = "0.2.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["color", "derive", "wrap_help"] }
crossterm = "0.28.1"
fancy-regex = "0.13.0"
futures = { version = "0.3.30", features = ["futures-executor"] }
indicatif = "0.17.8"
isolang = "2.4.0"
itertools = "0.13.0"
lava_torrent = "0.11.1"
open = "5.3.0"
phf = { version = "0.11.2", features = ["serde", "macros"] }
polyfit-rs = "0.2.1"
polynomial = "0.2.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["std", "alloc", "preserve_order", "raw_value"] }
ssimulacra2 = { version = "0.5.0", default-features = false }
statrs = "0.17.1"
which = "6.0.3"
